force-app/main/default/objects/Call_Log__c/Call_Log__c.object-meta.xml
<CustomObject>
    <label>Call Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Call Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>