force-app/main/default/objects/Call_Log__c/fields/Agent_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Agent_Disposition__c</fullName>
    <label>Agent Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>