force-app/main/default/objects/Call_Log__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <description>Agent email who handled this call.</description>
    <inlineHelpText>Agent email who handled this call.</inlineHelpText>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>