force-app/main/default/objects/Call_Log__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <description>Caller ID Number</description>
    <inlineHelpText>Caller ID Number</inlineHelpText>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>