force-app/main/default/objects/Call_Log__c/fields/Answered_Duration__c.field-meta.xml
<CustomField>
    <fullName>Answered_Duration__c</fullName>
    <description>The time that the call was in an answered state.</description>
    <inlineHelpText>The time that the call was in an answered state.</inlineHelpText>
    <label>Answered Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>