force-app/main/default/objects/Call_Log__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <description>Formula to flag trigger to create billable inventory record when a call is forwarded to a company after activation or after hours.</description>
    <formula>AND( 
Answered_Duration__c &gt;= 0, 
OR(Record_Type__c = &quot;nuHome nuCard CPL&quot;,Record_Type__c = &quot;nuHome nuCard SUB&quot;,Record_Type__c = &quot;nuHome nuCard SPEC&quot;) 
, 
Account__c != NULL, 
Record_Type__c != NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to flag trigger to create billable inventory record when a call is forwarded to a company after activation or after hours.</inlineHelpText>
    <label>Billable?</label>
    <type>Checkbox</type>
</CustomField>