force-app/main/default/objects/Call_Log__c/fields/BP_Call_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>BP_Call_Time_Stamp__c</fullName>
    <description>The raw time stamp that Bright Pattern gives to each record as it occurs within the system.</description>
    <inlineHelpText>The raw time stamp that Bright Pattern gives to each record as it occurs within the system.</inlineHelpText>
    <label>BP Call Time Stamp</label>
    <type>TextArea</type>
</CustomField>