force-app/main/default/objects/Call_Log__c/fields/Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>Call_Direction__c</fullName>
    <description>This shows if the call was outbound or inbound.</description>
    <inlineHelpText>This shows if the call was outbound or inbound.</inlineHelpText>
    <label>Call Direction</label>
    <type>TextArea</type>
</CustomField>