force-app/main/default/objects/Call_Log__c/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <description>The system or agent disposition for this call record.</description>
    <inlineHelpText>The system or agent disposition for this call record.</inlineHelpText>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Announcement</fullName>
            </value>
            <value>
                <fullName>Answering Machine</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Call Back Appointment</fullName>
            </value>
            <value>
                <fullName>Call Back Later</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Dropped while talking</fullName>
            </value>
            <value>
                <fullName>Fast busy</fullName>
            </value>
            <value>
                <fullName>Fax or modem</fullName>
            </value>
            <value>
                <fullName>Has Provider</fullName>
            </value>
            <value>
                <fullName>Invalid number</fullName>
            </value>
            <value>
                <fullName>Network announcement</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>No disposition</fullName>
            </value>
            <value>
                <fullName>No English</fullName>
            </value>
            <value>
                <fullName>No numbers left to call</fullName>
            </value>
            <value>
                <fullName>Not Answered</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Number matches DNC</fullName>
            </value>
            <value>
                <fullName>Other connection issue</fullName>
            </value>
            <value>
                <fullName>Persons Work Phone</fullName>
            </value>
            <value>
                <fullName>Person&apos;s Work Phone</fullName>
            </value>
            <value>
                <fullName>QC Call</fullName>
            </value>
            <value>
                <fullName>Silence</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>System failure</fullName>
            </value>
            <value>
                <fullName>Warm Transfer</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Wrong person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>