force-app/main/default/objects/Call_Log__c/fields/Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes__c</fullName>
    <description>Notes an agent enters in during a call.</description>
    <inlineHelpText>Notes an agent enters in during a call.</inlineHelpText>
    <label>Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>