force-app/main/default/objects/Call_Log__c/fields/Call_Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Link__c</fullName>
    <formula>HYPERLINK(&quot;http://nuhome.brightpattern.com:8080/admin/?cdrId=097FE7CEF89D475AA15B7F30A7300221&amp;stepId=&quot;&amp;	interactionStepId__c, &quot;Call Recording&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Bright Pattern call recording.</inlineHelpText>
    <label>Call Recording Link</label>
    <type>Text</type>
</CustomField>