force-app/main/default/objects/Call_Log__c/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <formula>IF( OR(  TEXT( Call_Disposition__c) =  &quot;Appointment Set&quot;, 
     TEXT( Call_Disposition__c)= &quot;Call Back Appointment&quot;, 
     TEXT( Call_Disposition__c)= &quot;Call Back Later&quot;, 
     TEXT( Call_Disposition__c)= &quot;DNC&quot;,  
     TEXT( Call_Disposition__c)= &quot;Dropped while talking&quot;, 
     TEXT( Call_Disposition__c)= &quot;Has Provider&quot;, 
     TEXT( Call_Disposition__c)= &quot;Not Interested&quot;,  
     TEXT( Call_Disposition__c)= &quot;Call Back&quot;,  
     TEXT( Call_Disposition__c)= &quot;Not Qualified&quot;), True, 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>