force-app/main/default/objects/Call_Log__c/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Did record that is associated with this call.</description>
    <inlineHelpText>Did record that is associated with this call.</inlineHelpText>
    <label>DID</label>
    <referenceTo>DID__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>