force-app/main/default/objects/Call_Log__c/fields/interactionStepId__c.field-meta.xml
<CustomField>
    <fullName>interactionStepId__c</fullName>
    <description>Call specific call ID.</description>
    <inlineHelpText>Call specific call ID.</inlineHelpText>
    <label>interactionStepId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>