force-app/main/default/objects/Call_Log__c/fields/Inventory_Created__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once inventory is created this box should be updated to = True. 
This should prevent duplicate inventory being created.</description>
    <inlineHelpText>Once inventory is created this box should be updated to = True. 
This should prevent duplicate inventory being created.</inlineHelpText>
    <label>Inventory Created?</label>
    <type>Checkbox</type>
</CustomField>