force-app/main/default/objects/Call_Log__c/fields/IsUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to invoke a trigger that updates call log and links lookup fields to connected object. Like searching User_Address__c.fPhone__c records for all that match the Call_Logg__c.ANI__c field then insert that records ID on the call log object.</description>
    <inlineHelpText>This is used to invoke a trigger that updates call log and links lookup fields to connected object. Like searching User_Address__c.fPhone__c records for all that match the Call_Logg__c.ANI__c field then insert that records ID on the call log object.</inlineHelpText>
    <label>IsUpdated</label>
    <type>Checkbox</type>
</CustomField>