force-app/main/default/objects/Call_Log__c/fields/OB_Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>OB_Call_Recording__c</fullName>
    <description>Call recording link for outbound calls.</description>
    <inlineHelpText>Call recording link for outbound calls.</inlineHelpText>
    <label>OB Call Recording</label>
    <length>255</length>
    <type>Text</type>
</CustomField>