force-app/main/default/objects/Call_Log__c/fields/OB_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>OB_Call_Time__c</fullName>
    <label>OB Call Time</label>
    <type>DateTime</type>
</CustomField>