force-app/main/default/objects/Call_Log__c/fields/OB_Campaign__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign__c</fullName>
    <formula>OB_Campaign_Member__r.Campaign_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign</label>
    <type>Text</type>
</CustomField>