force-app/main/default/objects/Call_Log__c/fields/OB_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The OB Campaign member associated with this call.</description>
    <inlineHelpText>The OB Campaign member associated with this call.</inlineHelpText>
    <label>OB Campaign Member</label>
    <referenceTo>OB_Campaign_Member__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>