force-app/main/default/objects/Call_Log__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>This is the inbound campaign that this call routed through.</description>
    <inlineHelpText>This is the inbound campaign that this call routed through.</inlineHelpText>
    <label>Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>