force-app/main/default/objects/Call_Log__c/fields/Service_EWT__c.field-meta.xml
<CustomField>
    <fullName>Service_EWT__c</fullName>
    <description>The estimated wait time to reach an agent at the moment the call was ended.</description>
    <inlineHelpText>The estimated wait time to reach an agent at the moment the call was ended.</inlineHelpText>
    <label>Service EWT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>