force-app/main/default/objects/Call_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <formula>IF( TEXT( Call_Disposition__c )= &quot;Appointment Set&quot; , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>