force-app/main/default/objects/Call_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Saleforce user associated with this call.</description>
    <inlineHelpText>This is the Saleforce user associated with this call.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>