force-app/main/default/objects/Call_Log__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to connect call log to the user address.</description>
    <inlineHelpText>This is a lookup field to connect call log to the user address.</inlineHelpText>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>