force-app/main/default/objects/Call_Log__c/recordTypes/nuHome_Door_Tag_Script.recordType-meta.xml
<RecordType>
    <fullName>nuHome_Door_Tag_Script</fullName>
    <active>true</active>
    <description>Door Tag call records</description>
    <label>nuHome Door Tag Script</label>
</RecordType>