force-app/main/default/objects/Call_Log__c/recordTypes/nuHome_nuCard_CPL.recordType-meta.xml
<RecordType>
    <fullName>nuHome_nuCard_CPL</fullName>
    <active>true</active>
    <description>Cost Per Lead</description>
    <label>nuHome nuCard CPL</label>
</RecordType>