force-app/main/default/objects/Call_Log__c/recordTypes/nuHome_nuCard_SPEC.recordType-meta.xml
<RecordType>
    <fullName>nuHome_nuCard_SPEC</fullName>
    <active>true</active>
    <description>This is the default record type of the Call Log Object, reserved for cases when a record type is not found.</description>
    <label>nuHome nuCard SPEC</label>
</RecordType>