force-app/main/default/objects/Call_Log__c/recordTypes/nuHome_nuCard_SPEC_OLD.recordType-meta.xml
<RecordType>
    <fullName>nuHome_nuCard_SPEC_OLD</fullName>
    <active>false</active>
    <description>Once the Bright Pattern Inbound call comes in for NuCard Spec and is routed to the Billing Opportunity after doing the round robin, the agent will have to click in the Transfer Success button and an Inventory record should be auto created.</description>
    <label>nuHome nuCard SPEC_OLD</label>
</RecordType>