force-app/main/default/objects/Call_Log__c/recordTypes/nuHome_nuCard_SUB.recordType-meta.xml
<RecordType>
    <fullName>nuHome_nuCard_SUB</fullName>
    <active>true</active>
    <description>It will store all the nuCard Sub opportunity inventories.</description>
    <label>nuHome nuCard SUB</label>
</RecordType>