force-app/main/default/objects/Call_Log__c/recordTypes/nuHome_OB_Campaign.recordType-meta.xml
<RecordType>
    <fullName>nuHome_OB_Campaign</fullName>
    <active>true</active>
    <description>OBCC Call Center Calls</description>
    <label>nuHome OB Campaign</label>
</RecordType>